openkoda/autocomplete/src/grammar/FlowParser.ts
// Generated from ./src/grammar/Flow.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { FlowListener } from "./FlowListener";
import { FlowVisitor } from "./FlowVisitor";


export class FlowParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly MGET = 10;
	public static readonly SERVICES = 11;
	public static readonly RESULT = 12;
	public static readonly THEN = 13;
	public static readonly THENSET = 14;
	public static readonly FLOW = 15;
	public static readonly NAME = 16;
	public static readonly KEY = 17;
	public static readonly STRING = 18;
	public static readonly SP = 19;
	public static readonly WS = 20;
	public static readonly RULE_expression = 0;
	public static readonly RULE_chain = 1;
	public static readonly RULE_flowExpression = 2;
	public static readonly RULE_flow = 3;
	public static readonly RULE_dot = 4;
	public static readonly RULE_then = 5;
	public static readonly RULE_thenSet = 6;
	public static readonly RULE_key = 7;
	public static readonly RULE_name = 8;
	public static readonly RULE_string = 9;
	public static readonly RULE_lambda = 10;
	public static readonly RULE_modelGet = 11;
	public static readonly RULE_services = 12;
	public static readonly RULE_result = 13;
	public static readonly RULE_body = 14;
	public static readonly RULE_poperation = 15;
	public static readonly RULE_operation = 16;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"expression", "chain", "flowExpression", "flow", "dot", "then", "thenSet", 
		"key", "name", "string", "lambda", "modelGet", "services", "result", "body", 
		"poperation", "operation",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.'", "'('", "')'", "','", "'=>'", "'{'", "'}'", "'\"'", "'='", 
		"'model.get'", "'services'", "'result'", "'then'", "'thenSet'", "'flow'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "MGET", "SERVICES", "RESULT", "THEN", 
		"THENSET", "FLOW", "NAME", "KEY", "STRING", "SP", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(FlowParser._LITERAL_NAMES, FlowParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return FlowParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Flow.g4"; }

	// @Override
	public get ruleNames(): string[] { return FlowParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return FlowParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(FlowParser._ATN, this);
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, FlowParser.RULE_expression);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 34;
			this.flow();
			this.state = 35;
			this.dot();
			this.state = 36;
			this.chain();
			this.state = 37;
			this.match(FlowParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public chain(): ChainContext {
		let _localctx: ChainContext = new ChainContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, FlowParser.RULE_chain);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 39;
			this.flowExpression();
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === FlowParser.T__0) {
				{
				{
				this.state = 40;
				this.dot();
				this.state = 41;
				this.flowExpression();
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public flowExpression(): FlowExpressionContext {
		let _localctx: FlowExpressionContext = new FlowExpressionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, FlowParser.RULE_flowExpression);
		try {
			this.state = 50;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case FlowParser.THEN:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 48;
				this.then();
				}
				break;
			case FlowParser.THENSET:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 49;
				this.thenSet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public flow(): FlowContext {
		let _localctx: FlowContext = new FlowContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, FlowParser.RULE_flow);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 52;
			this.match(FlowParser.FLOW);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public dot(): DotContext {
		let _localctx: DotContext = new DotContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, FlowParser.RULE_dot);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.match(FlowParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public then(): ThenContext {
		let _localctx: ThenContext = new ThenContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, FlowParser.RULE_then);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.match(FlowParser.THEN);
			this.state = 57;
			this.match(FlowParser.T__1);
			this.state = 58;
			this.lambda();
			this.state = 59;
			this.match(FlowParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thenSet(): ThenSetContext {
		let _localctx: ThenSetContext = new ThenSetContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, FlowParser.RULE_thenSet);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 61;
			this.match(FlowParser.THENSET);
			this.state = 62;
			this.match(FlowParser.T__1);
			this.state = 63;
			this.key();
			this.state = 64;
			this.match(FlowParser.T__3);
			this.state = 65;
			this.lambda();
			this.state = 66;
			this.match(FlowParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public key(): KeyContext {
		let _localctx: KeyContext = new KeyContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, FlowParser.RULE_key);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 68;
			this.match(FlowParser.KEY);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public name(): NameContext {
		let _localctx: NameContext = new NameContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, FlowParser.RULE_name);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this.match(FlowParser.NAME);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public string(): StringContext {
		let _localctx: StringContext = new StringContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, FlowParser.RULE_string);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 72;
			_la = this._input.LA(1);
			if (!(_la === FlowParser.KEY || _la === FlowParser.STRING)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lambda(): LambdaContext {
		let _localctx: LambdaContext = new LambdaContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, FlowParser.RULE_lambda);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.name();
			this.state = 75;
			this.match(FlowParser.T__4);
			this.state = 76;
			this.body();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public modelGet(): ModelGetContext {
		let _localctx: ModelGetContext = new ModelGetContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, FlowParser.RULE_modelGet);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(FlowParser.MGET);
			this.state = 79;
			this.match(FlowParser.T__1);
			this.state = 80;
			this.key();
			this.state = 81;
			this.match(FlowParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public services(): ServicesContext {
		let _localctx: ServicesContext = new ServicesContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, FlowParser.RULE_services);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this.match(FlowParser.SERVICES);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public result(): ResultContext {
		let _localctx: ResultContext = new ResultContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, FlowParser.RULE_result);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 85;
			this.match(FlowParser.RESULT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public body(): BodyContext {
		let _localctx: BodyContext = new BodyContext(this._ctx, this.state);
		this.enterRule(_localctx, 28, FlowParser.RULE_body);
		let _la: number;
		try {
			this.state = 93;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case FlowParser.T__0:
			case FlowParser.T__1:
			case FlowParser.T__3:
			case FlowParser.T__4:
			case FlowParser.T__7:
			case FlowParser.T__8:
			case FlowParser.MGET:
			case FlowParser.SERVICES:
			case FlowParser.RESULT:
			case FlowParser.NAME:
			case FlowParser.KEY:
			case FlowParser.STRING:
			case FlowParser.SP:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 87;
				this.operation();
				}
				break;
			case FlowParser.T__5:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 88;
				this.match(FlowParser.T__5);
				this.state = 90;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FlowParser.T__0) | (1 << FlowParser.T__1) | (1 << FlowParser.T__3) | (1 << FlowParser.T__4) | (1 << FlowParser.T__7) | (1 << FlowParser.T__8) | (1 << FlowParser.MGET) | (1 << FlowParser.SERVICES) | (1 << FlowParser.RESULT) | (1 << FlowParser.NAME) | (1 << FlowParser.KEY) | (1 << FlowParser.STRING) | (1 << FlowParser.SP))) !== 0)) {
					{
					this.state = 89;
					this.operation();
					}
				}

				this.state = 92;
				this.match(FlowParser.T__6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public poperation(): PoperationContext {
		let _localctx: PoperationContext = new PoperationContext(this._ctx, this.state);
		this.enterRule(_localctx, 30, FlowParser.RULE_poperation);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this.match(FlowParser.T__1);
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FlowParser.T__0) | (1 << FlowParser.T__1) | (1 << FlowParser.T__3) | (1 << FlowParser.T__4) | (1 << FlowParser.T__7) | (1 << FlowParser.T__8) | (1 << FlowParser.MGET) | (1 << FlowParser.SERVICES) | (1 << FlowParser.RESULT) | (1 << FlowParser.NAME) | (1 << FlowParser.KEY) | (1 << FlowParser.STRING) | (1 << FlowParser.SP))) !== 0)) {
				{
				this.state = 96;
				this.operation();
				}
			}

			this.state = 99;
			this.match(FlowParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public operation(): OperationContext {
		let _localctx: OperationContext = new OperationContext(this._ctx, this.state);
		this.enterRule(_localctx, 32, FlowParser.RULE_operation);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 113;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case FlowParser.MGET:
					{
					this.state = 101;
					this.modelGet();
					}
					break;
				case FlowParser.SERVICES:
					{
					this.state = 102;
					this.services();
					}
					break;
				case FlowParser.RESULT:
					{
					this.state = 103;
					this.result();
					}
					break;
				case FlowParser.KEY:
				case FlowParser.STRING:
					{
					this.state = 104;
					this.string();
					}
					break;
				case FlowParser.T__3:
					{
					this.state = 105;
					this.match(FlowParser.T__3);
					}
					break;
				case FlowParser.T__7:
					{
					this.state = 106;
					this.match(FlowParser.T__7);
					}
					break;
				case FlowParser.T__8:
					{
					this.state = 107;
					this.match(FlowParser.T__8);
					}
					break;
				case FlowParser.T__4:
					{
					this.state = 108;
					this.match(FlowParser.T__4);
					}
					break;
				case FlowParser.NAME:
					{
					this.state = 109;
					this.name();
					}
					break;
				case FlowParser.SP:
					{
					this.state = 110;
					this.match(FlowParser.SP);
					}
					break;
				case FlowParser.T__0:
					{
					this.state = 111;
					this.dot();
					}
					break;
				case FlowParser.T__1:
					{
					this.state = 112;
					this.poperation();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << FlowParser.T__0) | (1 << FlowParser.T__1) | (1 << FlowParser.T__3) | (1 << FlowParser.T__4) | (1 << FlowParser.T__7) | (1 << FlowParser.T__8) | (1 << FlowParser.MGET) | (1 << FlowParser.SERVICES) | (1 << FlowParser.RESULT) | (1 << FlowParser.NAME) | (1 << FlowParser.KEY) | (1 << FlowParser.STRING) | (1 << FlowParser.SP))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!FlowParser.__ATN) {
			FlowParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(FlowParser._serializedATN));
		}

		return FlowParser.__ATN;
	}

}

export class ExpressionContext extends ParserRuleContext {
	public flow(): FlowContext {
		return this.getRuleContext(0, FlowContext);
	}
	public dot(): DotContext {
		return this.getRuleContext(0, DotContext);
	}
	public chain(): ChainContext {
		return this.getRuleContext(0, ChainContext);
	}
	public EOF(): TerminalNode { return this.getToken(FlowParser.EOF, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_expression; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterExpression) {
			listener.enterExpression(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitExpression) {
			listener.exitExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitExpression) {
			return visitor.visitExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ChainContext extends ParserRuleContext {
	public flowExpression(): FlowExpressionContext[];
	public flowExpression(i: number): FlowExpressionContext;
	public flowExpression(i?: number): FlowExpressionContext | FlowExpressionContext[] {
		if (i === undefined) {
			return this.getRuleContexts(FlowExpressionContext);
		} else {
			return this.getRuleContext(i, FlowExpressionContext);
		}
	}
	public dot(): DotContext[];
	public dot(i: number): DotContext;
	public dot(i?: number): DotContext | DotContext[] {
		if (i === undefined) {
			return this.getRuleContexts(DotContext);
		} else {
			return this.getRuleContext(i, DotContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_chain; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterChain) {
			listener.enterChain(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitChain) {
			listener.exitChain(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitChain) {
			return visitor.visitChain(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FlowExpressionContext extends ParserRuleContext {
	public then(): ThenContext | undefined {
		return this.tryGetRuleContext(0, ThenContext);
	}
	public thenSet(): ThenSetContext | undefined {
		return this.tryGetRuleContext(0, ThenSetContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_flowExpression; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterFlowExpression) {
			listener.enterFlowExpression(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitFlowExpression) {
			listener.exitFlowExpression(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitFlowExpression) {
			return visitor.visitFlowExpression(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class FlowContext extends ParserRuleContext {
	public FLOW(): TerminalNode { return this.getToken(FlowParser.FLOW, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_flow; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterFlow) {
			listener.enterFlow(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitFlow) {
			listener.exitFlow(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitFlow) {
			return visitor.visitFlow(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class DotContext extends ParserRuleContext {
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_dot; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterDot) {
			listener.enterDot(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitDot) {
			listener.exitDot(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitDot) {
			return visitor.visitDot(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ThenContext extends ParserRuleContext {
	public THEN(): TerminalNode { return this.getToken(FlowParser.THEN, 0); }
	public lambda(): LambdaContext {
		return this.getRuleContext(0, LambdaContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_then; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterThen) {
			listener.enterThen(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitThen) {
			listener.exitThen(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitThen) {
			return visitor.visitThen(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ThenSetContext extends ParserRuleContext {
	public THENSET(): TerminalNode { return this.getToken(FlowParser.THENSET, 0); }
	public key(): KeyContext {
		return this.getRuleContext(0, KeyContext);
	}
	public lambda(): LambdaContext {
		return this.getRuleContext(0, LambdaContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_thenSet; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterThenSet) {
			listener.enterThenSet(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitThenSet) {
			listener.exitThenSet(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitThenSet) {
			return visitor.visitThenSet(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class KeyContext extends ParserRuleContext {
	public KEY(): TerminalNode { return this.getToken(FlowParser.KEY, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_key; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterKey) {
			listener.enterKey(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitKey) {
			listener.exitKey(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitKey) {
			return visitor.visitKey(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class NameContext extends ParserRuleContext {
	public NAME(): TerminalNode { return this.getToken(FlowParser.NAME, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_name; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterName) {
			listener.enterName(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitName) {
			listener.exitName(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitName) {
			return visitor.visitName(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class StringContext extends ParserRuleContext {
	public KEY(): TerminalNode | undefined { return this.tryGetToken(FlowParser.KEY, 0); }
	public STRING(): TerminalNode | undefined { return this.tryGetToken(FlowParser.STRING, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_string; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterString) {
			listener.enterString(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitString) {
			listener.exitString(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitString) {
			return visitor.visitString(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class LambdaContext extends ParserRuleContext {
	public name(): NameContext {
		return this.getRuleContext(0, NameContext);
	}
	public body(): BodyContext {
		return this.getRuleContext(0, BodyContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_lambda; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterLambda) {
			listener.enterLambda(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitLambda) {
			listener.exitLambda(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitLambda) {
			return visitor.visitLambda(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ModelGetContext extends ParserRuleContext {
	public MGET(): TerminalNode { return this.getToken(FlowParser.MGET, 0); }
	public key(): KeyContext {
		return this.getRuleContext(0, KeyContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_modelGet; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterModelGet) {
			listener.enterModelGet(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitModelGet) {
			listener.exitModelGet(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitModelGet) {
			return visitor.visitModelGet(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ServicesContext extends ParserRuleContext {
	public SERVICES(): TerminalNode { return this.getToken(FlowParser.SERVICES, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return FlowParser.RULE_services; }
	// @Override
	public enterRule(listener: FlowListener): void {
		if (listener.enterServices) {
			listener.enterServices(this);
		}
	}
	// @Override
	public exitRule(listener: FlowListener): void {
		if (listener.exitServices) {
			listener.exitServices(this);
		}
	}
	// @Override
	public accept<Result>(visitor: FlowVisitor<Result>): Result {
		if (visitor.visitServices) {
			return visitor.visitServices(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

